правки 9-го задания
