# openapi/openapi.yaml
@@ -4,6 +4,19 @@ info:
   version: 1.0.0
 paths:
   /tasks:
+    get:
+      summary: Get all tasks
+      tags:
+        - tasks
+      responses:
+        '200':
+          description: A list of tasks
+          content:
+            application/json:
+              schema:
+                type: array
+                items:
+                  $ref: '#/components/schemas/Task'  
     post:
       summary: Create a new task
       tags:
@@ -22,28 +35,31 @@ paths:
             application/json:
               schema:
                 $ref: '#/components/schemas/Task'
-
-  /tasks/{id}:
+  /users/{user_id}/tasks:
     get:
       summary: Get tasks by user id
       tags:
         - tasks
       parameters:
-        - name: id
+        - name: user_id
           in: path
           required: true
-          description: ID of the user to update
+          description: ID of the user
           schema:
             type: integer
+            format: uint
+            minimum: 1
       responses:
         '200':
-          description: A list of tasks
+          description: A list of user's tasks
           content:
             application/json:
               schema:
                 type: array
                 items:
                   $ref: '#/components/schemas/Task'
+
+  /tasks/{id}:
     patch:
       summary: Update a task
       tags:
@@ -216,11 +232,6 @@ components:
         updated_at:
           type: string
           format: date-time
-          readOnly: true
-        deleted_at:
-          type: string
-          format: date-time
-          nullable: true
           readOnly: true
         tasks:
           type: array
